chore(logo): add logo and first component

--- a/src/app/angular-attack.component.html
+++ b/src/app/angular-attack.component.html
@@ -1,12 +1,8 @@
-<h1>
-  {{title}}
-</h1>
-
+<app-header></app-header>
 <app-repository></app-repository>
+
 <h1 (click)="login()">
   login
 </h1>
-<h1 (click)="logout()">
-  logout
-</h1>
+
 {{user | json}}
