--- a/src/app/angular-attack.component.html
+++ b/src/app/angular-attack.component.html
@@ -1,8 +1,11 @@
 <app-header></app-header>
-<app-repository></app-repository>
+
+<a [routerLink]="['/repositories']">repos</a>
 
 <h1 (click)="login()">
   login
 </h1>
 
 {{user | json}}
+
+<router-outlet></router-outlet>
