chore(header): background and logo

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,17 @@
 <header>
-  <img src="/img/logo.png"/>
+  <h1>
+    <img src="/img/logo.png"/>
 
+    Scrummingbird
+  </h1>
+
+  <h2>
+    Scrumify your GitHub Issues.
+  </h2>
+
+  <nav>
+    <a href="">sdasd</a>
+    <a href="">asdsa</a>
+    <a href="">asdsa</a>
+  </nav>
 </header>
