chore(header): add login button to nav

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,16 @@
 <header>
-  <h1>
+  <h3>
     <img src="/img/logo.png"/>
-
     Scrummingbird
+  </h3>
+
+  <h1>
+    Scrumify your GitHub Issues.
   </h1>
 
-  <h2>
-    Scrumify your GitHub Issues.
-  </h2>
-
   <nav>
-    <a href="">sdasd</a>
-    <a href="">asdsa</a>
-    <a href="">asdsa</a>
+    <a (click)="login()" href="#">Login</a>
+    <a href="#">asdsa</a>
+    <a href="#">asdsa</a>
   </nav>
 </header>
