--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
-$top: 10px;
-$left: 10px;
+$topBottom: 20px;
+$leftRight: 30px;
 
 header {
   background-image: url('/img/header.jpg');
@@ -7,12 +7,12 @@ header {
   background-position: center center;
 
   position: relative;
-  height: 400px;
+  height: 170px;
 
   font-family: 'Raleway', sans-serif;
   color: #fff;
 
-  padding: $top $left;
+  padding: $topBottom $leftRight;
 
   .escape-hatchet {
     margin: 0;
@@ -20,18 +20,20 @@ header {
     color: #fff;
     text-decoration: none;
     text-transform: full-size-kana;
-    font-size: 2.5em;
+    font-size: 1.8em;
   }
 
   h1 {
-    margin-top: 80px;
+    position: absolute;
     text-align: center;
+    top: $topBottom;
+    width: 100%;
   }
 
   nav {
     position: absolute;
-    top: $top;
-    right: $left;
+    top: $topBottom;
+    right: $leftRight;
 
     height: 90px;
     line-height: 90px;
@@ -47,7 +49,7 @@ header {
 
       &:hover {
         border: 1px solid #fff;
-        background-color: rgba(255,255,255, 0.2);
+        background-color: rgba(255, 255, 255, 0.2);
       }
     }
   }
