feat(repositoryView): list of repository

--- a/src/app/components/repository/repository.component.html
+++ b/src/app/components/repository/repository.component.html
@@ -1,9 +1,5 @@
-<p>
-LIST OF MY REPOS
-</p>
-
 <ul>
   <li *ngFor="#repo of repositories | async">
-    {{repo | json}}
+    {{repo.name}}
   </li>
 </ul>
