chore(header): routing

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header [class.jumbo]="">
   <a [routerLink]="['/']" href="#" class="escape-hatchet">
     <img src="/img/logo.png"/>
     Scrummingbird
