feat(repositoryDetails): add some markup

--- a/src/app/components/repository-details/repository-details.component.html
+++ b/src/app/components/repository-details/repository-details.component.html
@@ -1,5 +1,5 @@
-<p>
-  repository-details works!
-</p>
+<div class="page-header">
+  <h1>{{repository.name}} <small>{{repository.description}}</small> <span class="badge">{{repository.open_issues}}</span> </h1>
+</div>
 
 {{repository | json}}
