--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,56 +7,77 @@ header {
   background-position: center center;
 
   position: relative;
-  height: 300px;
+  height: 600px;
 
   font-family: 'Raleway', sans-serif;
   color: #fff;
 
   padding: $topBottom $leftRight;
+}
 
-  .escape-hatchet {
-    margin: 0;
-    padding: 0;
-    color: #fff;
-    text-decoration: none;
-    text-transform: full-size-kana;
-    font-size: 1.8em;
+header.isHome {
+  height: auto;
+
+  .jumbo {
+    display: none;
+  }
+}
+
+.escape-hatchet {
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  text-decoration: none;
+  text-transform: full-size-kana;
+  font-size: 1.8em;
+}
+
+.jumbo {
+  width: 600px;
+  padding: 50px;
+  text-align: center;
+  margin: 30px auto;
+  background-color: rgba(0, 0, 0, 0.6);
+
+  p {
+    padding: 30px 0;
+    font-size: 1.4em;
   }
 
-  h1 {
-    position: absolute;
+  .btn-start {
+    display: block;
     text-align: center;
-    bottom: $topBottom;
-    width: 100%;
+    border: 1px solid #fff;
+    font-size: 1.4em;
   }
+}
 
-  nav {
-    position: absolute;
-    top: $topBottom;
-    right: $leftRight;
+.profile-image {
+  max-width: 45px;
+  max-height: 45px;
+  margin-left: 20px;
+}
 
-    height: 90px;
-    line-height: 90px;
+nav {
+  position: absolute;
+  top: $topBottom;
+  right: $leftRight;
 
-    a {
-      color: #fff;
-      padding: 5px;
-      text-decoration: none;
-      border: 1px solid transparent;
+  height: 90px;
+  line-height: 90px;
+}
 
-      transition-duration: 500ms;
-      transition-property: border, background-color;
+.btn-bordered {
+  color: #fff;
+  padding: 5px;
+  text-decoration: none;
+  border: 1px solid transparent;
 
-      &:hover {
-        border: 1px solid #fff;
-        background-color: rgba(255, 255, 255, 0.2);
-      }
-    }
-  }
+  transition-duration: 500ms;
+  transition-property: border, background-color;
 
-  .profile-image {
-    max-width: 45px;
-    max-height: 45px;
-    margin-right: 10px;
+  &:hover {
+    border: 1px solid #fff;
+    background-color: rgba(255, 255, 255, 0.2);
   }
 }
