chore(home): add some text

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,21 @@
 <article>
-  <header class="special">asd</header>
+  <header class="special">
+    <span class="fa fa-github"></span>
+  </header>
+
+  <div class="row">
+    <div class="col-md-4 text-center">
+      You like to organize your issues using GitHub but would like to easily stick to a Scrum based method?
+      We will support you by enhancing GitHub by adding advanced features which implement a Scrum oriented view your GitHub issues!
+    </div>
+    <div class="col-md-4 text-center">
+      Using Scrummingbird it is as easy to define your sprints and make use of a backlog where you can organize issues of you
+      and of users of your library or project as well!
+    </div>
+    <div class="col-md-4 text-center">
+      Login now to enhance your projects by the power of Scrum and start your Scrummingbird journey today!
+      You will never find a better solution how to organize your issues on GitHub when you want to follow a Scrum based process.
+      This service is free and requires some rights on your repositories which allow us to create Milestones and Labels for you!
+    </div>
+  </div>
 </article>
