chore(header): responsive ui tweaks

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header [class.isHome]="!isHome">
   <a [routerLink]="['/']" href="#" class="escape-hatchet">
     <img src="/img/logo.png"/>
-    Scrummingbird
+    <span class="brand">Scrummingbird</span>
   </a>
 
   <div class="jumbo">
