--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,6 +15,11 @@ header {
   padding: $topBottom $leftRight;
 }
 
+.brand {
+  transition-duration: 500ms;
+  transition-property: display;
+}
+
 header.isHome {
   height: auto;
 
@@ -79,5 +84,15 @@ nav {
   &:hover {
     border: 1px solid #fff;
     background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
+@media (max-width: 750px) {
+  .brand {
+    display: none;
+  }
+
+  .jumbo {
+    width: 95%;
   }
 }
