--- a/src/style.scss
+++ b/src/style.scss
@@ -6,8 +6,10 @@ body {
 .landing-indicator {
   text-align: center;
   margin-top: 10%;
+  position: relative;
 
   img {
+    position: relative;
     animation-name: shake;
     animation-duration: 0.8s;
     transform-origin:50% 50%;
@@ -27,5 +29,23 @@ body {
     80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
     90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
     100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+  .overlay {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.8);
+    animation-name: flow;
+    animation-duration: 4s;
+    transform-origin:50% 50%;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+
+  @keyframes flow {
+    0% {height: 90%;}
+    100% {height: 0%;}
   }
 }
