--- a/src/app/components/repository-details/repository-details.component.html
+++ b/src/app/components/repository-details/repository-details.component.html
@@ -2,4 +2,5 @@
   <h1>{{repository.name}} <small>{{repository.description}}</small> <span class="badge">{{repository.open_issues}}</span> </h1>
 </div>
 <app-milestone-list repoName="{{repoName}}"></app-milestone-list>
+<app-issue-list repoName="{{repoName}}"></app-issue-list>
 {{repository | json}}
