feat(context): add owner to context

--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -8,12 +8,10 @@
     </p>
   </a>
 
-  <a  href="#" class="list-group-item" >
+  <div class="list-group-item" >
     <div class="btn-group" role="group" aria-label="...">
-      <button type="button" class="btn btn-default">Left</button>
-      <button type="button" class="btn btn-default">Middle</button>
-      <button type="button" class="btn btn-default">Right</button>
+      <button type="button" class="btn btn-default">add</button>
     </div>
-  </a>
+  </div>
 </div>
 {{milestones | json}}
