fix(context): now really makes use of context

--- a/src/app/components/repository-details/repository-details.component.html
+++ b/src/app/components/repository-details/repository-details.component.html
@@ -5,10 +5,10 @@
 
 <div class="row">
   <div class="col-md-6">
-    <app-milestone-list repoName="{{repoName}}"></app-milestone-list>
+    <app-milestone-list ownerName="{{ownerName}}" repoName="{{repoName}}"></app-milestone-list>
   </div>
   <div class="col-md-4">
-    <app-issue-list repoName="{{repoName}}"></app-issue-list>
+    <!-- <app-issue-list repoName="{{repoName}}"></app-issue-list> -->
   </div>
 
 </div>
