--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -1,16 +1,46 @@
-<h2>Sprints</h2> <span class="badge"></span>
-<div class="list-group">
-  <a  href="#" class="list-group-item" *ngFor="let mile of milestones">
-    <span class="badge">{{mile.openIssues}}</span>
-    <h4 class="list-group-item-heading">{{mile.title}}</h4>
-    <p class="list-group-item-text">
+<h2>Sprints</h2>
+<p>
+  <a [routerLink]="['/milestones/' + ownerName + '/' + repoName + '/add']" class="btn btn-default">add</a>
+</p>
+<div class="panel panel-default panel-sprint" *ngFor="let mile of milestones">
+  <div class="panel-heading">
+    <h3 class="panel-title">{{mile.title}} <span class="badge pull-right">Open: {{mile.openIssues}}</span></h3>
+  </div>
+  <div class="panel-body">
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+        60%
+      </div>
+    </div>
+
+    <p>
       {{mile.description}}
     </p>
-  </a>
 
-  <div class="list-group-item" >
-    <div class="btn-group" role="group" aria-label="...">
-      <a [routerLink]="['/milestones/' + ownerName + '/' + repoName + '/add']" class="btn btn-default">add</a>
+    <div class="list-group list-issues">
+      <div class="list-group-item issue issue-">d</div>
+      <div class="list-group-item">d</div>
+      <div class="list-group-item">d</div>
+      <div class="list-group-item">d</div>
+      <div class="list-group-item">d</div>
     </div>
+
+  </div>
+</div>
+
+<div class="panel panel-default panel-sprint">
+  <div class="panel-heading">
+    <h3 class="panel-title">Backlog</h3>
+  </div>
+  <div class="panel-body">
+
+    <div class="list-group list-issues">
+      <div class="list-group-item">User Story <span class="label label-info">1 day</span></div>
+      <div class="list-group-item">User Story <span class="label label-info">2 days</span></div>
+      <div class="list-group-item">User Story <span class="label label-info">3 days</span></div>
+      <div class="list-group-item">User Story <span class="label label-info">5 days</span></div>
+      <div class="list-group-item">User Story <span class="label label-info">8 days</span></div>
+    </div>
+
   </div>
 </div>
