chore(milestone-list): nicen ui

--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -18,11 +18,11 @@
     </p>
 
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-">d</div>
-      <div class="list-group-item">d</div>
-      <div class="list-group-item">d</div>
-      <div class="list-group-item">d</div>
-      <div class="list-group-item">d</div>
+      <div class="list-group-item issue issue-new">New issue <span class="label label-info">2 days</span></div>
+      <div class="list-group-item issue issue-assigned">Assigned Issue <span class="label label-info">2 days</span></div>
+      <div class="list-group-item issue issue-assigned">Assigned Issue <span class="label label-info">8 days</span></div>
+      <div class="list-group-item issue issue-assigned">Assigned Issue <span class="label label-info">8 days</span></div>
+      <div class="list-group-item issue issue-done">Issue Done <span class="label label-info">8 days</span></div>
     </div>
 
   </div>
@@ -35,7 +35,7 @@
   <div class="panel-body">
 
     <div class="list-group list-issues">
-      <div class="list-group-item">User Story <span class="label label-info">1 day</span></div>
+      <div class="list-group-item">User Story <span class="label label-info">1 day </span></div>
       <div class="list-group-item">User Story <span class="label label-info">2 days</span></div>
       <div class="list-group-item">User Story <span class="label label-info">3 days</span></div>
       <div class="list-group-item">User Story <span class="label label-info">5 days</span></div>
