--- a/src/app/components/repository-details/repository-details.component.html
+++ b/src/app/components/repository-details/repository-details.component.html
@@ -8,7 +8,7 @@
     <app-milestone-list ownerName="{{ownerName}}" repoName="{{repoName}}"></app-milestone-list>
   </div>
   <div class="col-md-4">
-    <!-- <app-issue-list repoName="{{repoName}}"></app-issue-list> -->
+    <app-issue-list repoName="{{repoName}}"></app-issue-list>
   </div>
 
 </div>
