--- a/src/app/components/repository-details/repository-details.component.html
+++ b/src/app/components/repository-details/repository-details.component.html
@@ -8,7 +8,18 @@
     <app-milestone-list ownerName="{{ownerName}}" repoName="{{repoName}}"></app-milestone-list>
   </div>
   <div class="col-md-4">
-    <app-issue-list repoName="{{repoName}}"></app-issue-list>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          Details of Issue / Milestone
+        </h3>
+      </div>
+      <div class="panel-body">
+        The issue's description, status, assignee, labels, ....
+      </div>
+    </div>
+
   </div>
 
 </div>
