fix(header): typo...

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
     </h1>
     <p>
       Add the power of Scrum to your GitHub projects!<br>
-      It has never bee easier :)
+      It has never been easier :)
     </p>
     <a [routerLink]="['/repositories']" href="#" class="btn-start btn-bordered">
       Scrum on!
