--- a/src/app/components/repository-details/repository-details.component.html
+++ b/src/app/components/repository-details/repository-details.component.html
@@ -20,6 +20,8 @@
       </div>
     </div>
 
+    <app-issue-list ownerName="{{ownerName}}" repoName="{{repoName}}" ></app-issue-list>
+
   </div>
 
 </div>
