--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -12,15 +12,8 @@
     </h3>
   </div>
   <div class="panel-body">
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-           style="width: 60%;">
-        60%
-      </div>
-    </div>
-
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" *ngFor="let issue of getIssuesForMilestone(mile)">{{issue.title}}
+      <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]">{{issue.title}}
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
       </div>
     </div>
@@ -35,11 +28,9 @@
   <div class="panel-body">
 
     <div class="list-group list-issues">
-      <div class="list-group-item">User Story <span class="label label-info">1 day </span></div>
-      <div class="list-group-item">User Story <span class="label label-info">2 days</span></div>
-      <div class="list-group-item">User Story <span class="label label-info">3 days</span></div>
-      <div class="list-group-item">User Story <span class="label label-info">5 days</span></div>
-      <div class="list-group-item">User Story <span class="label label-info">8 days</span></div>
+      <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues " >{{issue.title}}
+        <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
+      </div>
     </div>
 
   </div>
