--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -23,6 +23,7 @@
 
 <div class="panel panel-default panel-sprint">
   <div class="panel-heading">
+    <a class="btn btn-default btn-xs pull-right" [routerLink]="['/repositories/' + ownerName + '/' + repoName + '/issues/add']"><i class="fa fa-plus"></i></a>
     <h3 class="panel-title">Backlog</h3>
   </div>
   <div class="panel-body">
