--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="panel-body">
         <div class="list-group list-issues">
-          <div class="list-group-item issue issue-new" *ngFor="let issue of myIssues">{{issue.title}}
+          <div class="list-group-item issue issue-new" *ngFor="let issue of myIssues" (click)="selectIssue(issue)">{{issue.title}} - {{issue.state}}
             <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
           </div>
         </div>
@@ -18,20 +18,18 @@
     </div>
   </div>
 <div class="col-md-4">
-  <div class="panel panel-default panel-sprint">
+  <div class="panel panel-default panel-sprint" *ngIf="selectedIssue">
     <div class="panel-heading">
       <h3 class="panel-title">
-    My Tasks
-    <span class="badge pull-right">Open: XX</span>
-  </h3>
+        {{selectedIssue.title}}
+        <div class="btn-group" role="group" aria-label="...">
+          <button type="button" class="btn btn-xs btn-primary" (click)="close(selectedIssue)">close</button>
+        </div>
+      </h3>
     </div>
     <div class="panel-body">
-      <div class="list-group list-issues">
-        <div class="list-group-item issue issue-new" *ngFor="let issue of myIssues">{{issue.title}}
-          <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
-        </div>
+        {{selectedIssue.body}}
       </div>
-    </div>
   </div>
 </div>
 </div>
