feat(myTasks): add add issue button

--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -5,7 +5,9 @@
       <div class="panel-heading">
         <h3 class="panel-title">
       My Tasks
-      <span class="badge pull-right">Open: XX</span>
+      <div class="btn-group" role="group" aria-label="...">
+        <button type="button" class="btn btn-xs btn-primary" (click)="open()">open</button>
+      </div>
     </h3>
       </div>
       <div class="panel-body">
