feat(myTasks): greenify open issue button

--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -6,7 +6,7 @@
         <h3 class="panel-title">
       My Tasks
       <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-xs btn-primary" (click)="open()">open</button>
+        <button type="button" class="btn btn-xs btn-success" (click)="open()">open</button>
       </div>
     </h3>
       </div>
