feat(myTask): unassigns a one of my task

--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -27,6 +27,7 @@
         {{selectedIssue.title}}
         <div class="btn-group" role="group" aria-label="...">
           <button type="button" class="btn btn-xs btn-primary" (click)="close(selectedIssue)">close</button>
+          <button type="button" class="btn btn-xs btn-default" (click)="unassign(selectedIssue)">unassign</button>
         </div>
       </h3>
     </div>
