--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -13,7 +13,7 @@
       <div class="panel-body">
         <div class="list-group list-issues">
           <div class="list-group-item issue issue-new"
-            *ngFor="let issue of myIssues" (click)="selectIssue(issue)" [ngClass]="issue.state">{{issue.title}} - {{issue.repository.name}}
+            *ngFor="let issue of myIssues" (click)="selectIssue(issue)" [ngClass]="{'active': selectedIssue && (issue.id == selectedIssue.id)}">{{issue.title}} - {{issue.repository.name}}
             <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
           </div>
         </div>
