--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -1,11 +1,11 @@
 <h2>Sprints</h2>
 <p>
-  <a [routerLink]="['/milestones/' + ownerName + '/' + repoName + '/add']" class="btn btn-default">add</a>
+  <a [routerLink]="['/milestones/' + ownerName + '/' + repoName + '/add']" class="btn btn-default">Create Sprint</a>
 </p>
 
 <div class="panel panel-default panel-sprint" *ngFor="let mile of milestones">
   <div class="panel-heading">
-    <h3 class="panel-title">
+    <h3 class="panel-title" (click)="showDetails(mile)">
       {{mile.title}}
       <i class="fa fa-question-circle-o" aria-hidden="true" *ngIf="mile.title" [tooltip]="mile.description"></i>
       <span class="badge pull-right">Open: {{mile.openIssues}}</span>
@@ -13,7 +13,7 @@
   </div>
   <div class="panel-body">
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]">{{issue.title}}
+      <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]" (click)="showDetails(issue)">{{issue.title}}
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
       </div>
     </div>
@@ -29,7 +29,7 @@
   <div class="panel-body">
 
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues " >{{issue.title}}
+      <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues" (click)="showDetails(issue)">{{issue.title}}
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
       </div>
     </div>
