--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -4,36 +4,43 @@
     <div class="panel panel-default panel-sprint">
       <div class="panel-heading">
         <h3 class="panel-title">
-      My Tasks
-      <div class="btn-group" role="group" aria-label="...">
-        <button type="button" class="btn btn-xs btn-success" (click)="open()">open</button>
-      </div>
-    </h3>
+          My Tasks
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-xs btn-success" (click)="open()">open</button>
+          </div>
+        </h3>
       </div>
       <div class="panel-body">
         <div class="list-group list-issues">
           <div class="list-group-item issue issue-new"
-            *ngFor="let issue of myIssues" (click)="selectIssue(issue)" [ngClass]="{'active': selectedIssue && (issue.id == selectedIssue.id)}">{{issue.title}} - {{issue.repository.name}}
-            <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
+               *ngFor="let issue of myIssues" (click)="selectIssue(issue)"
+               [ngClass]="{'active': selectedIssue && (issue.id == selectedIssue.id)}">
+
+            <h4 class="list-group-item-heading">{{issue.title}}</h4>
+            <div class="list-group-item-text">
+              {{issue.repository.name}}
+            </div>
           </div>
+
+
         </div>
       </div>
     </div>
   </div>
-<div class="col-md-4">
-  <div class="panel panel-default panel-sprint" *ngIf="selectedIssue">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        {{selectedIssue.title}}
-        <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-xs btn-primary" (click)="close(selectedIssue)">close</button>
-          <button type="button" class="btn btn-xs btn-default" (click)="unassign(selectedIssue)">unassign</button>
-        </div>
-      </h3>
-    </div>
-    <div class="panel-body">
+  <div class="col-md-4">
+    <div class="panel panel-default panel-sprint" *ngIf="selectedIssue">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          {{selectedIssue.title}}
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-xs btn-primary" (click)="close(selectedIssue)">close</button>
+            <button type="button" class="btn btn-xs btn-default" (click)="unassign(selectedIssue)">unassign</button>
+          </div>
+        </h3>
+      </div>
+      <div class="panel-body">
         {{selectedIssue.body}}
       </div>
+    </div>
   </div>
-</div>
 </div>
