--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -31,6 +31,13 @@
     <div class="list-group list-issues">
       <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues" (click)="showDetails(issue)">{{issue.title}}
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
+
+        <input [(ngModel)]="selected[issue.number]"
+               [typeahead]="milestones"
+               (typeaheadOnSelect)="typeaheadOnSelect($event, issue.number)"
+               [typeaheadOptionField]="'title'"
+               class="form-control">
+
       </div>
     </div>
 
