feat(myTasksComments): shows issue comments in details section

--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -11,17 +11,13 @@
       </div>
       <div class="panel-body">
         <div class="list-group list-issues">
-          <div class="list-group-item issue issue-new"
-               *ngFor="let issue of myIssues | filterBy: [filterValue] | async" (click)="selectIssue(issue)"
-               [ngClass]="{'active': selectedIssue && (issue.id == selectedIssue.id)}">
+          <div class="list-group-item issue issue-new" *ngFor="let issue of myIssues | filterBy: [filterValue] | async" (click)="selectIssue(issue)" [ngClass]="{'active': selectedIssue && (issue.id == selectedIssue.id)}">
 
             <h4 class="list-group-item-heading">{{issue.title}}</h4>
             <div class="list-group-item-text">
               {{issue.repository.name}}
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
@@ -40,9 +36,23 @@
       <div class="panel-body">
         {{selectedIssue.body}}
 
-        <accordion>
-          <accordion-group heading="Comments" (click)="loadComments(issue)"[isOpen]="test">
-            This content is straight in the template.
+        <accordion *ngIf="selectedIssue.commentCount > 0">
+          <accordion-group heading="Comments" (click)="loadComments(selectedIssue)" [isOpen]="test">
+
+            <div *ngFor="let comment of selectedIssueComments | async">
+              <div class="col-sm-12">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <strong>{{comment.user.login | json}}</strong>
+                    <span class="text-muted">commented at {{comment.updated_at | json}}</span>
+                  </div>
+                  <div class="panel-body">
+                    {{comment.body | json}}
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </accordion-group>
         </accordion>
 
