chore(disclaimer): add github accounts

--- a/src/app/components/disclaimer/disclaimer.component.html
+++ b/src/app/components/disclaimer/disclaimer.component.html
@@ -3,15 +3,21 @@
     <h2>Disclaimer</h2>
     <p>
       The information contained in this website is for general information purposes only.
-      The information is provided by Scrummingbird and while we endeavour to keep the information up to date and correct,
-      we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability,
-      suitability or availability with respect to the website or the information, products, services, or related graphics
-      contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.
+      The information is provided by Scrummingbird and while we endeavour to keep the information up to date and
+      correct,
+      we make no representations or warranties of any kind, express or implied, about the completeness, accuracy,
+      reliability,
+      suitability or availability with respect to the website or the information, products, services, or related
+      graphics
+      contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your
+      own risk.
     </p>
 
     <p>
-      In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss or
-      damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection with,
+      In no event will we be liable for any loss or damage including without limitation, indirect or consequential loss
+      or
+      damage, or any loss or damage whatsoever arising from loss of data or profits arising out of, or in connection
+      with,
       the use of this website.
     </p>
     <p>
@@ -31,5 +37,19 @@
   <div class="col-md-4 text-center">
     <img src="https://codearcs.de/img/logo.png">
     <h2>By CodeArcs.de</h2>
+    <span>
+        <a href="https://github.com/gussi77" target="_blank">
+          <img src="https://avatars.githubusercontent.com/u/15237341?v=3" style="max-height: 48px">
+        </a>
+        <a href="https://github.com/sprengerjo" target="_blank">
+          <img src="https://avatars.githubusercontent.com/u/3956956?v=3" style="max-height: 48px">
+        </a>
+        <a href="https://github.com/SteKoe" target="_blank">
+          <img src="https://avatars.githubusercontent.com/u/1809221?v=3" style="max-height: 48px">
+        </a>
+        <a href="https://github.com/Pandaros" target="_blank">
+          <img src="https://avatars.githubusercontent.com/u/8467856?v=3" style="max-height: 48px">
+        </a>
+    </span>
   </div>
 </div>
